--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.2.0",
+    "@astrojs/node": "^9.1.3",
+    "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.2",
     "tailwindcss": "^4.0.14"
