--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/node": "^9.1.3",
     "@astrojs/sitemap": "^3.2.1",
+    "@fontsource/dm-mono": "^5.2.5",
+    "@fontsource/shippori-antique-b1": "^5.2.5",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.2",
     "tailwindcss": "^4.0.14"
