--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.2",
     "tailwindcss": "^4.0.14"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
