--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/node": "^9.1.3",
+    "@astrojs/react": "^4.2.6",
     "@astrojs/sitemap": "^3.2.1",
     "@fontsource/dm-mono": "^5.2.5",
     "@fontsource/shippori-antique-b1": "^5.2.5",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "animejs": "^4.0.2",
     "astro": "^5.5.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
